// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TreeState > createFromTree > should create state when a valid tree is supplied 1`] = `
[
  [
    0,
  ],
  [
    0,
    2,
  ],
  [
    0,
    2,
    3,
  ],
  [
    0,
    2,
    4,
  ],
  [
    0,
    5,
  ],
  [
    1,
  ],
  [
    "z",
  ],
]
`;

exports[`TreeState > getNodeAt > should fail with a custom error when supplied rowId does not exist 1`] = `[Error: Tried to get node at row "25" but got nothing, the tree are 7 visible rows]`;

exports[`TreeState > getNodeAt > should get a for an existing rowId > 2nd row 1`] = `
{
  "children": [
    {
      "children": [
        {
          "id": "c-3",
          "name": "Leaf 3 Child",
          "state": {},
        },
      ],
      "id": 3,
      "name": "Leaf 3",
      "state": {
        "deletable": true,
        "expanded": false,
        "favorite": true,
      },
    },
    {
      "id": 4,
      "name": "Leaf 4",
    },
  ],
  "id": 2,
  "name": "Leaf 2",
  "state": {
    "deletable": true,
    "expanded": true,
  },
}
`;

exports[`TreeState > getNodeAt > should get a for an existing rowId > 3rd row 1`] = `
{
  "children": [
    {
      "id": "c-3",
      "name": "Leaf 3 Child",
      "state": {},
    },
  ],
  "id": 3,
  "name": "Leaf 3",
  "state": {
    "deletable": true,
    "expanded": false,
    "favorite": true,
  },
}
`;

exports[`TreeState > getNodeAt > should get a for an existing rowId > 7th row 1`] = `
{
  "id": "z",
  "name": "Leaf z",
  "state": {
    "deletable": true,
    "favorite": true,
  },
}
`;

exports[`TreeState > getNodeDeepness > should fail with a custom error when supplied rowId does not exist 1`] = `[Error: Tried to get node at row "40" but got nothing, the tree are 7 visible rows]`;
